--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 html {
   font-size: 20px;
-  font-family: "Amatic SC";
+  font-family: "Amatic SC", sans-serif;
 }
 
 body {
   background-image: url(./picture.jpg);
-  opacity: 1;
   background-size: cover;
+  background-repeat: no-repeat;
   color: white;
 }
 
@@ -55,9 +55,6 @@ a:hover {
 }
 
 .left, .right, .center {
-  border: 2px dotted white;
-  background-color: black;
-  border-radius: 0.5rem;;
   padding: 3%;
   width: 30%;
   opacity: 0.7;
@@ -68,11 +65,59 @@ a:hover {
 }
 
 footer {
-  border-radius: 0.5rem;;
   word-spacing: 0.5rem;
   padding-left: 1%;
   font-weight: bold;
-  background-color: black;
-  border: 2px dotted white;
   opacity: 0.75;
+}
+
+.left, .right, .center, footer {
+  border: 1px dotted white;
+  border-radius: 0.5rem;
+  background-color: black;
+}
+
+@media only screen and (max-width: 600px) {
+  .main {
+    flex-direction: column;
+    margin-bottom: 0;
+  }
+
+  header {
+    text-align: center;
+  }
+
+  .left, .right, .center, footer{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    border: 0;
+    border-radius: 0;
+  }
+
+  .left, .center, .right {
+    margin-bottom: 3%;
+    min-height: 5rem;
+  }
+
+  h1 {
+    font-size: 3rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+    padding-bottom: 1rem;
+    padding-left: 1rem;
+    padding-top: 1rem;
+  }
+
+  p {
+    font-size: 1rem;
+    padding: 0 1rem 1rem 1rem;
+  }
+
+  footer p{
+    padding: 0.5rem 0.5rem;
+    word-spacing: 0.2rem;
+  }
 }
