--- a/style.css
+++ b/style.css
@@ -1,123 +1,83 @@
-html {
-  font-size: 20px;
-  font-family: "Amatic SC", sans-serif;
-}
-
 body {
-  background-image: url(./picture.jpg);
-  background-size: cover;
+  background-image: url(picture2.jpg);
   background-repeat: no-repeat;
-  color: white;
+  background-size: cover cover;
+  background-position: center center;
 }
 
-header {
-  font-weight: bold;
-  font-size: 4rem;
-  padding-bottom: 4%;
-  opacity: 0.8;
+.page {
+  font-size: 16px;
+  color: white;
+  font-family: "Inconsolata", monospace;
+  text-align: center;
+}
+
+h1 {
+  font-size: 8rem;
+  margin-top: 4rem;
 }
 
 h2 {
-   font-size: 2rem;
-   padding-bottom: 5%;
-   font-weight: bold;
+  font-size: 5rem;
+  margin-top: 2rem;
+}
+
+ul li {
+  display: inline;
+  list-style: none;
+}
+
+nav {
+  font-size: 3rem;
+  margin-top: 5rem;
 }
 
 p {
-  text-align: justify;
-  line-height: 1.5;
-  font-size: 1.2rem;
+  text-align: left;
+  font-size: 1.5rem;
+  margin-left: 2rem;
+  margin-top: 15rem;
 }
 
 a {
   color: white;
-  text-decoration: underline;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 a:hover {
-  opacity: 0.6;
+  color: black;
 }
 
-.page, .main, .header, .footer {
-  display: flex;
-}
-
-.main {
-  margin-bottom: 6%;
-}
-
-.page {
-  flex-direction: column;
-  margin-top: 4%;
-  margin-left: 4%;
-  margin-right: 4%;
-  margin-bottom: 1%;
-}
-
-.left, .right, .center {
-  padding: 3%;
-  width: 30%;
-  opacity: 0.7;
-}
-
-.left, .center {
-  margin-right: 2%;
-}
-
-footer {
-  word-spacing: 0.5rem;
-  padding-left: 1%;
-  font-weight: bold;
-  opacity: 0.75;
-}
-
-.left, .right, .center, footer {
-  border: 1px dotted white;
-  border-radius: 0.5rem;
-  background-color: black;
-}
-
-@media only screen and (max-width: 600px) {
-  .main {
-    flex-direction: column;
-    margin-bottom: 0;
-  }
-
-  header {
-    text-align: center;
-  }
-
-  .left, .right, .center, footer{
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    border: 0;
-    border-radius: 0;
-  }
-
-  .left, .center, .right {
-    margin-bottom: 3%;
-    min-height: 5rem;
-  }
-
+@media only screen and (max-width: 800px) {
   h1 {
-    font-size: 3rem;
+    font-size: 7rem;
   }
 
   h2 {
-    font-size: 1.5rem;
-    padding-bottom: 1rem;
-    padding-left: 1rem;
-    padding-top: 1rem;
+    font-size: 4rem;
+  }
+
+  nav {
+    font-size: 2rem;
   }
 
   p {
-    font-size: 1rem;
-    padding: 0 1rem 1rem 1rem;
+    font-size: 1.3rem;
+    margin-left: 1rem;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  h1 {
+    font-size: 5rem;
   }
 
-  footer p{
-    padding: 0.5rem 0.5rem;
-    word-spacing: 0.2rem;
+  h2 {
+    font-size: 2.5rem;
+  }
+
+  nav {
+    font-size: 1.5rem;
   }
 }
