--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
-  background-image: url(picture2.jpg);
-  background-repeat: no-repeat;
+  background-image: url(picture4.jpg);
+  background-repeat: repeat;
   background-size: cover cover;
-  background-position: center center;
+  background-position: top center;
 }
 
 .page {
@@ -12,12 +12,38 @@ body {
   text-align: center;
 }
 
+.container {
+  width: 50rem;
+  height: auto;
+  margin: 6rem auto;
+  background-color: black;
+  text-align: justify;
+  padding: 1rem;
+  border: 2px solid white;
+}
+
 h1 {
-  font-size: 8rem;
-  margin-top: 4rem;
+  font-size: 4rem;
+  padding: 1rem;
 }
 
 h2 {
+  font-size: 2rem;
+  padding: 1rem;
+}
+
+p {
+  padding: 1rem;
+  line-height: 1.5;
+  font-size: 1.2rem;
+}
+
+h1.index {
+  font-size: 8rem;
+  margin-top: 10rem;
+}
+
+h2.index {
   font-size: 5rem;
   margin-top: 2rem;
 }
@@ -27,34 +53,60 @@ ul li {
   list-style: none;
 }
 
-nav {
-  font-size: 3rem;
-  margin-top: 5rem;
+li a {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
-p {
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  font-size: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: black;
+  width: 100%;
+  text-align: center;
+  border-bottom: 2px solid white;
+}
+
+footer p {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
   text-align: left;
   font-size: 1.5rem;
-  margin-left: 2rem;
-  margin-top: 15rem;
+  margin-top: 20rem;
+  background-color: black;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 2rem;
+  border-top: 2px solid white;
 }
 
-a {
+nav a {
   color: white;
   text-decoration: none;
   cursor: pointer;
 }
 
 a:hover {
-  color: black;
+  opacity: 0.5;
+}
+
+a {
+  color: white;
+  text-decoration: underline;
 }
 
 @media only screen and (max-width: 800px) {
-  h1 {
+  h1.index {
     font-size: 7rem;
   }
 
-  h2 {
+  h2.index {
     font-size: 4rem;
   }
 
@@ -62,22 +114,39 @@ a:hover {
     font-size: 2rem;
   }
 
-  p {
+  footer p {
     font-size: 1.3rem;
-    margin-left: 1rem;
+  }
+
+  li a {
+    margin: 0;
+  }
+
+  .container {
+    width: 80%;
+    border: none;
   }
 }
 
 @media only screen and (max-width: 650px) {
-  h1 {
+  h1.index {
     font-size: 5rem;
   }
 
-  h2 {
+  h2.index {
     font-size: 2.5rem;
   }
 
   nav {
     font-size: 1.5rem;
   }
+
+  h1 {
+    font-size: 3rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+  }
+
 }
