paddings, border-radius

--- a/style.css
+++ b/style.css
@@ -15,11 +15,12 @@ body {
 .container {
   width: 50rem;
   height: auto;
-  margin: 6rem auto;
+  margin: 7rem auto;
   background-color: black;
   text-align: justify;
   padding: 1rem;
   border: 2px solid white;
+  border-radius: 0.5rem;
 }
 
 h1 {
@@ -80,8 +81,8 @@ footer p {
   font-size: 1.5rem;
   margin-top: 20rem;
   background-color: black;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   padding-left: 2rem;
   border-top: 2px solid white;
 }
@@ -124,7 +125,6 @@ a {
 
   .container {
     width: 80%;
-    border: none;
   }
 }
 
@@ -143,10 +143,16 @@ a {
 
   h1 {
     font-size: 3rem;
+    padding: 0.5rem;
   }
 
   h2 {
     font-size: 1.5rem;
+    padding: 0.5rem;
   }
 
+  p {
+    padding: 0.5rem;
+    font-size: 1.1rem;
+  }
 }
