--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
-  background-image: url(picture4.jpg);
+  background-image: url(picture.jpg);
   background-repeat: repeat;
   background-size: cover cover;
-  background-position: top center;
+  background-position: bottom top;
 }
 
 .page {
@@ -13,19 +13,24 @@ body {
 }
 
 .container {
+  margin: 7rem auto;
   width: 50rem;
   height: auto;
-  margin: 7rem auto;
+}
+
+.container2 {
+  margin: 2rem auto;
   background-color: black;
   text-align: justify;
   padding: 1rem;
-  border: 2px solid white;
+  box-shadow: 1rem 1rem 0.5rem 0rem rgba(0,0,0,0.75);
   border-radius: 0.5rem;
 }
 
 h1 {
   font-size: 4rem;
   padding: 1rem;
+  text-align: center;
 }
 
 h2 {
@@ -41,12 +46,14 @@ p {
 
 h1.index {
   font-size: 8rem;
-  margin-top: 10rem;
+  text-align: center;
+  margin-top: 12rem;
 }
 
 h2.index {
   font-size: 5rem;
-  margin-top: 2rem;
+  margin-top: 3rem;
+  text-align: center;
 }
 
 ul li {
