--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background-image: url(picture.jpg);
   background-repeat: repeat;
-  background-size: cover cover;
+  background-size: cover;
   background-position: bottom top;
 }
 
@@ -27,6 +27,20 @@ body {
   border-radius: 0.5rem;
 }
 
+.image-container img {
+  max-width: 100%;
+  height: auto;
+  text-align: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.image-container {
+  width: 20rem;
+  height: auto;
+  margin: 0 auto;
+  overflow: hidden;
+}
 h1 {
   font-size: 4rem;
   padding: 1rem;
